# quanskill-workshop-2

./: .gitignore  competitor_analysis_20250809_100456.json  main.py  pyproject.toml
session_1/: session_1.ipynb
session_2/: app.py  crew.py  session_2 copy.ipynb  session_2.ipynb
session_2/config/: agents.yaml  tasks.yaml
session_3/: app.py  crew.py  session_3.ipynb  streamlit_ui_listener.py
session_3/config/: agents.yaml  tasks.yaml
